# CureCraft-Labs

./: .clang-format  .gitignore  BUILD_GUIDE.md  CMakeLists.txt  HTML_UI.md  LICENSE  OPTIMIZATIONS.md  PERFORMANCE.md  QUICKSTART.md  RASPBERRY_PI_SETUP.md  README.md  SETUP.md  SODFDFD  TECHNICAL_DESIGN.md  deploy.sh  journal-read.sh  setup-dependencies.sh  start-curecraft.sh  status.sh
.cache/clangd/index/: auth.cpp.4842C2C40FD5E4C0.idx  auth.h.6117EDAB32292C75.idx  httplib.h.3D8B98B59ABC1351.idx  i2c_driver.cpp.F6EA32354FCD8C07.idx  i2c_driver.h.59F5A16310D4212A.idx  i2c_protocol.h.A31AD6D8EB1C7DFD.idx  main.cpp.A22890EF0BC343D8.idx  sensor_manager.cpp.CB26026A8EFD6667.idx  sensor_manager.h.98475EED3BC62DBC.idx  signal_generator.cpp.155C4EDD25506871.idx  signal_generator.h.F8C113E1A319EEB5.idx  webserver.cpp.B3008DB149A62ACA.idx  webserver.h.ECAF53F41887092A.idx
.github/workflows/: ci.yml
firmware/sensor_hub/: README.md  protocol.h  sensor_hub.ino  sensor_hub_firmware.ino
include/: auth.h  i2c_driver.h  input.h  mainwindow.h  sensor_manager.h  signal_generator.h  webserver.h
include/core/: MQTTDriver.h  SensorDataStore.h  signal_generator.h
include/hardware/: i2c_driver.h  i2c_protocol.h  sensor_manager.h
include/server/: auth.h  webserver.h
scripts/: README.md  deploy-to-pi.sh  deploy.sh  install-dependencies.sh  install-systemd-service.sh  journal-clear.sh  logs-clear.sh  logs.sh  run-mock.sh  run-production.sh  setup-service.sh  setup.sh  start-curecraft.sh  start-web.sh
src/: CMakeLists.txt  auth.cpp  curecraft_math.cpp  input.cpp  main.cpp  math.cpp  signal_generator.cpp  webserver.cpp
src/core/: MQTTDriver.cpp  SensorDataStore.cpp  signal_generator.cpp
src/gui/: mainwindow.cpp  mainwindow.ui
src/hardware/: i2c_driver.cpp  sensor_manager.cpp
src/server/: auth.cpp  main_web.cpp  webserver.cpp
tests/: test_main.cpp  test_sensor_manager.cpp  test_signal_generator.cpp
tests/diagnostics/firmware/: i2c_slave_test.ino
tests/diagnostics/host/: compile_and_run.sh  i2c_diag.cpp
web/: app.js  index.html  login.html  style.css
